a lot of things fixed
